fix: if music is too large will throw Maximum call stack size exceeded

--- a/index.scss
+++ b/index.scss
@@ -4,7 +4,7 @@ $contentSize: $totalSize/3;
 $titleSize: 20px;
 $bottomSize: $totalSize/14;
 :root {
-  --background-image: url("./images/flower.jpg");
+  --background-image: url("https://avatars.githubusercontent.com/u/42455616?v=4");
 }
 
 .audio-player-mini {
